@@ -354,20 +354,6 @@ name|lucene
 operator|.
 name|index
 operator|.
-name|IndexReader
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
-name|index
-operator|.
 name|OrdTermState
 import|;
 end_import
@@ -815,12 +801,12 @@ block|}
 end_constructor
 
 begin_comment
-comment|/**    * Constructs an empty instance that can optionally store the start and end    * character offset of each token term in the text. This can be useful for    * highlighting of hit locations with the Lucene highlighter package.    * Private until the highlighter package matures, so that this can actually    * be meaningfully integrated.    *     * @param storeOffsets    *            whether or not to store the start and end character offset of    *            each token term in the text    */
+comment|/**    * Constructs an empty instance that can optionally store the start and end    * character offset of each token term in the text. This can be useful for    * highlighting of hit locations with the Lucene highlighter package.    * Protected until the highlighter package matures, so that this can actually    * be meaningfully integrated.    *     * @param storeOffsets    *            whether or not to store the start and end character offset of    *            each token term in the text    */
 end_comment
 
 begin_constructor
 DECL|method|MemoryIndex
-specifier|private
+specifier|protected
 name|MemoryIndex
 parameter_list|(
 name|boolean
@@ -4523,6 +4509,8 @@ name|positions
 operator|.
 name|size
 argument_list|()
+operator|/
+name|stride
 return|;
 block|}
 annotation|@
@@ -4540,6 +4528,8 @@ name|get
 argument_list|(
 name|posUpto
 operator|++
+operator|*
+name|stride
 argument_list|)
 return|;
 block|}
@@ -4552,8 +4542,27 @@ name|startOffset
 parameter_list|()
 block|{
 return|return
+name|stride
+operator|==
+literal|1
+condition|?
 operator|-
 literal|1
+else|:
+name|positions
+operator|.
+name|get
+argument_list|(
+operator|(
+name|posUpto
+operator|-
+literal|1
+operator|)
+operator|*
+name|stride
+operator|+
+literal|1
+argument_list|)
 return|;
 block|}
 annotation|@
@@ -4565,8 +4574,27 @@ name|endOffset
 parameter_list|()
 block|{
 return|return
+name|stride
+operator|==
+literal|1
+condition|?
 operator|-
 literal|1
+else|:
+name|positions
+operator|.
+name|get
+argument_list|(
+operator|(
+name|posUpto
+operator|-
+literal|1
+operator|)
+operator|*
+name|stride
+operator|+
+literal|2
+argument_list|)
 return|;
 block|}
 annotation|@
