@@ -1399,7 +1399,9 @@ name|memory
 init|=
 operator|new
 name|MemoryIndex
-argument_list|()
+argument_list|(
+literal|true
+argument_list|)
 decl_stmt|;
 name|memory
 operator|.
@@ -1478,6 +1480,36 @@ operator|!=
 name|DocIdSetIterator
 operator|.
 name|NO_MORE_DOCS
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|0
+argument_list|,
+name|disi
+operator|.
+name|nextPosition
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|0
+argument_list|,
+name|disi
+operator|.
+name|startOffset
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|3
+argument_list|,
+name|disi
+operator|.
+name|endOffset
+argument_list|()
 argument_list|)
 expr_stmt|;
 comment|// now reuse and check again
